import groovy.json.JsonOutput
import groovy.json.JsonSlurper

buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
    }
}
plugins {
    id 'eclipse'
    id 'maven-publish'
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'

mixin {
    add sourceSets.main, "apocalypse.mixins.refmap.json"
}

version = "${mc_version}-${mod_version}-${mod_state}"
group = 'com.toast.apocalypse'
archivesBaseName = 'Apocalypse-Rebooted'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: 'official', version: "${mc_version}"
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            property "mixin.debug.export", "true"
            property 'mixin.env.disableRefMap', 'true'

            arg "-mixin.config=apocalypse.mixins.json"


            mods {
                apocalypse {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            property 'mixin.env.disableRefMap', 'true'
            property "mixin.debug.export", "true"

            arg "-mixin.config=apocalypse.mixins.json"

            mods {
                apocalypse {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'apocalypse'

            mods {
                dampsoil {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            args '--mod', 'apocalypse', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                apocalypse {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        name 'CurseMaven'
        url 'https://www.cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
    flatDir {
        dir 'flat_deps'
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"

    runtimeOnly fg.deobf("curse.maven:jei-238222:${jei_version}")
    runtimeOnly fg.deobf("curse.maven:configured-457570:${configured_version}")

    implementation fg.deobf("curse.maven:top-245211:${top_version}")

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

jar {
    manifest {
        attributes([
            "Specification-Title": "Apocalypse",
            "Specification-Vendor": "Sarinsa",
            "Specification-Version": "1", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": "${version}",
            "Implementation-Vendor" :"Sarinsa",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
            "MixinConfigs": "apocalypse.mixins.json"
        ])
    }
}

task apiJar(type: Jar) {
    classifier = 'api'
    include 'com/toast/apocalypse/api/**/*'
    exclude 'com/toast/apocalypse/api/impl/**/*'

    from sourceSets.main.output
    from sourceSets.main.allSource
}

task updateVersionCheck {
    try {
        File jsonFile = file('version_check.json')

        if (!jsonFile.exists()) {
            println("Version check json not present, strange! Generating new file...")
            jsonFile.createNewFile()
            println("The newly generated file is empty, cause I am lazy. Lets fill it out manually!")
        }
        else {
            def parsedJson = new JsonSlurper().parse(jsonFile)
            Map<String, String> versions = parsedJson.promos

            String modVersion = "${mod_version}"
            String modState = "${mod_state}"
            String mcVersion = "${mc_version}"

            String latest = mcVersion + "-latest"

            // We only operate with one version per branch
            for (String key : versions.keySet()) {
                if (key != latest) {
                    versions.remove(key)
                }
            }
            versions.put(latest, mcVersion + "-" + modVersion + "-" + modState)
            jsonFile.setText(JsonOutput.prettyPrint(JsonOutput.toJson(parsedJson)))
        }
    }
    catch (Exception e) {
        e.printStackTrace();
    }
}

artifacts {
    archives apiJar
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
